bugfix: handle text overflow for username in header

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -68,6 +68,12 @@
     font-size: 4.5vw;
     text-align: center;
   }
+
+  p:nth-child(2) {
+    /* Text */
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 
